--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,20 @@
 .App {
   text-align: center;
+  font-family: "Open Sans", sans-serif;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
+.primary-color {
+  color: #ffffff;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.secondary-color {
+  color: #5b5e6a;
 }
 
-.App-link {
-  color: #61dafb;
+.success-background {
+  background: #27ccc0;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.danger-background {
+  background: #ff2f5a;
 }
