--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -5,7 +5,7 @@
   flex-direction: column;
   height: 100%;
   padding: 30px;
-  position: absolute;
+  position: fixed;
   top: 0;
   text-align: left;
 }
